# magee

./: Makefile  README.md  configure.ac  global.css  magee  magee_test1.sh  main.c  nbanner.c  svg.html  test2.sh  treewalk.c  vimrc
